# valid8

./: Cargo.toml
test_suite/: Cargo.toml
test_suite/tests/: simple.rs
valid8/: Cargo.toml
valid8/src/: lib.rs  validator.rs
valid8_derive/: Cargo.toml
valid8_derive/src/: lib.rs  validate.rs
